# Egg

./: .gitignore  LICENSE  README.md  SYNTEX.md  egg.py  extra.py  pyproject.toml
DB/: db.py
Tests/: combined.egg.txt  forloop.egg.txt  fun.egg.txt  ifstatement.egg.txt  tests.py  var.egg.txt  whileloop.egg.txt
docs/: architecture.md  contribute.md  example.md  syntax.md  tests.md
functions/: show.py
process/: definetask.py  findtask.py  validation.py
src/INTERPRETER/: __init__.py
src/INTERPRETER/Errors/: cli.py  fun.py  loop.py  runtime.py  syntex.py
src/INTERPRETER/Interpreter/: builtin.py  env.py  main.py
src/INTERPRETER/Lexer/: main.py  tokens.py
src/INTERPRETER/Parser/: main.py
src/INTERPRETER/Parser/nodes/: __init__.py  opr.py  programe.py  statements.py  var.py
src/INTERPRETER/ToolKit/: dataops.py
src/SHELL/: main.py
