[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "egglang"
version = "0.2.2"
description = "A basic programming lang written in Python"
authors = [
    {name = "Adib"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer"
]

[project.scripts]
egg = "SHELL.main:main"

[tool.setuptools.packages.find]
where = ["src"]